src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Evalauation</fullName>
        <description>Evaluate the Lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Dropped</fullName>
        </values>
        <values>
            <fullName>Evaluated - Pursue</fullName>
        </values>
        <values>
            <fullName>In Evaluation</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Parked</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Also_Sells__c</fullName>
        <description>Items that the seller sells, in addition to Verticals of Our Interest.</description>
        <label>Also Sells</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_State__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approval State</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Action__c</fullName>
        <label>Approver Action</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_Brands_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are the key brands for this seller approved in brand registry</description>
        <inlineHelpText>Are the key brands for this seller approved in brand registry</inlineHelpText>
        <label>Are Brands Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_templates_open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this after ensuring that verticals that this sellers will sell are Open.
If not, do not select.</description>
        <inlineHelpText>http://goo.gl/e8NaF7  See here if verticals are ready</inlineHelpText>
        <label>Are templates open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avg_Rating_on_other_sites__c</fullName>
        <description>Rating - 0 worst, 5 best</description>
        <inlineHelpText>Rating - 0 worst, 5 best</inlineHelpText>
        <label>Avg Rating on other sites</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_List__c</fullName>
        <description>list of brands the seller sells. Lower case, use ; as separator</description>
        <label>Brand List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>ApplianceSmall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio MP3Player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babycare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGM-Multiproduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CameraAccessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cameras and consumer electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Peripheral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComputerSystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital_ebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalEGiftVoucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalMP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EntertainmentLarge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EntertainmentSmall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GameCD/DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GameCDDVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handset</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Communication_Lang_Seller__c</fullName>
        <label>Communication Language Seller</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannada</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Order_Fulfillment_Volumes__c</fullName>
        <label>Possible Order fulfillment per day</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Turnover_Per_Month__c</fullName>
        <label>Current Turnover Per Month (Lakhs)</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Acceptance__c</fullName>
        <description>Can customer contact seller for order related issues</description>
        <label>Customer Contact Acceptable</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not OK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor_Type__c</fullName>
        <label>Distributor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regional Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Drop_Park_Notes__c</fullName>
        <description>Other reasons, for dropping or Parking a Lead</description>
        <label>Drop/Park Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Notes__c</fullName>
        <label>Evaluation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvaluteBeforeDate__c</fullName>
        <defaultValue>Today() + 14</defaultValue>
        <label>EvaluteBeforeDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fit_with_Flipkart_s_catalogue__c</fullName>
        <label>Fit with Flipkart&apos;s catalogue</label>
        <picklist>
            <picklistValues>
                <fullName>None of his Verticals are open in Flipkart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some of his Verticals are open in Flipkart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All of his Verticals are open in Flipkart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live_SKUs__c</fullName>
        <description>The initial set of SKU that seller will list on Go live or at max within 2 weeks of Go live.</description>
        <inlineHelpText>Use the number as the upper limit of a range</inlineHelpText>
        <label>Go Live SKUs</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Good_Quality_Printer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good Quality Printer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighestEscalation__c</fullName>
        <description>The phone number of the person who should be reached for escalations</description>
        <label>HighestEscalationPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HubName_del__c</fullName>
        <label>HubName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Name__c</fullName>
        <formula>Pickup_Pincode__r.Hub_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hub Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imaging_Support__c</fullName>
        <label>Imaging Support</label>
        <picklist>
            <picklistValues>
                <fullName>Has Online Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Imaging Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <description>Auto set by system YYMMDD**** format, where **** is a number</description>
        <displayFormat>{YY}{MM}{DD}{0000}</displayFormat>
        <label>LeadID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Markets_where_you_sell__c</fullName>
        <label>Markets where you sell</label>
        <picklist>
            <picklistValues>
                <fullName>Ebay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopclues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yebhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myntra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snapdeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeshop18</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_of_retail_outlets__c</fullName>
        <label>No: of retail outlets</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldLeadId__c</fullName>
        <description>Old Lead Id, if this is an old Lead.</description>
        <label>OldLeadId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Online_Experience__c</fullName>
        <label>Online Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Never Before</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Online_Revenue_as_of_total__c</fullName>
        <label>Online Revenue as % of total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Category_Information__c</fullName>
        <description>If none of entries in Category are valid for this seller, choose one or more of these</description>
        <inlineHelpText>If none of entries in Category are valid for this seller, choose one or more of these</inlineHelpText>
        <label>Other Category Information</label>
        <picklist>
            <picklistValues>
                <fullName>BGM-Multiproduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cameras and consumer electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MobileSoftware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValueAddedService</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Packaging_Capacility__c</fullName>
        <label>Packaging Capability</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Capable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Packaging Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Payments_Commission_Notes__c</fullName>
        <description>Capture notes related to payments and commission discussions.</description>
        <label>Payments Commission Notes</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PickupPincode__c</fullName>
        <inlineHelpText>The pincode of the hub for pickup</inlineHelpText>
        <label>PickupPincode_old</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Pincode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup Pincode</label>
        <referenceTo>PincodeHubMapping__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreEvalNotes__c</fullName>
        <label>PreEvalNotes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Procurement_Type__c</fullName>
        <label>Procurement Type</label>
        <picklist>
            <picklistValues>
                <fullName>From Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just In Time</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Parking__c</fullName>
        <label>Reason For Parking</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Not Interested Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech APIs needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verticals Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Not Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Capability Not Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FBF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Serviceable by EKL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Dropping__c</fullName>
        <label>Reason for Dropping</label>
        <picklist>
            <picklistValues>
                <fullName>Seller Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Not Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Details Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Catalogue Overlap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected Return Rates not Acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return policy not acceptable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Returns_Viability__c</fullName>
        <description>When told about usual return rates for the seller&apos;s core verticals, is he OK with that level of Returns?</description>
        <inlineHelpText>When told about usual return rates for the seller&apos;s core verticals, is he OK with that level of Returns?</inlineHelpText>
        <label>Acceptance of expected return rates</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not OK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Summary_On_Other_Marketplaces__c</fullName>
        <label>Review Summary On Other Marketplaces</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RevisitAfterDate__c</fullName>
        <description>If you parking this seller, set this value to remind you when to re-visit this lead</description>
        <label>Revisit After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SellerBrandType__c</fullName>
        <label>Seller Brand Type</label>
        <picklist>
            <picklistValues>
                <fullName>PrivateLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiBrand</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Seller_Display_Name__c</fullName>
        <label>Seller Display Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Primary_Email__c</fullName>
        <label>Seller Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_Registration_Email__c</fullName>
        <label>Seller Registration Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Size_of_Goods__c</fullName>
        <description>[Explain here guidelines..]</description>
        <label>Size of Goods</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SuperCategory__c</fullName>
        <label>SuperCategory</label>
        <picklist>
            <picklistValues>
                <fullName>BGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Softlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TAT_Profile__c</fullName>
        <formula>IF( ISPICKVAL( SuperCategory__c , &apos;CCC&apos;), 
 	&apos;13&apos;, 
 	IF (ISPICKVAL( SuperCategory__c, &apos;Softlines&apos;)  &amp;&amp; (INCLUDES( Category__c , &apos;Clothing&apos;)  || INCLUDES( Category__c , &apos;Footwear&apos;)), 
 		&apos;18&apos;, 
        IF (ISPICKVAL( SuperCategory__c, &apos;Softlines&apos;), 
        	&apos;13&apos;, 
        	IF (ISPICKVAL( SuperCategory__c, &apos;BGM&apos;) &amp;&amp; (INCLUDES( Category__c , &apos;BabyCare&apos;)  ||  INCLUDES( Category__c , &apos;Toy&apos;)),
        		&apos;18&apos;,
        		&apos;13&apos;
        	)
        )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAT Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_fulfill_order__c</fullName>
        <label>Time to fulfill order</label>
        <picklist>
            <picklistValues>
                <fullName>1 day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 2 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Status__c</fullName>
        <label>VAT Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied For</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>seller_id_if_known__c</fullName>
        <label>seller_id_if_known</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_account_manager__c</fullName>
        <label>tmp_account_manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_contact_info__c</fullName>
        <label>tmp_contact_info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_UnConverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Region__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>SuperCategory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Unconverted Leads</label>
    </listViews>
    <listViews>
        <fullName>AssignedToMe</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.PHONE</columns>
        <columns>SuperCategory__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>AssignedToMe</label>
    </listViews>
    <listViews>
        <fullName>BGM_UnAssigned</fullName>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>BGM UnAssigned</label>
        <queue>BGM_UnAssigned</queue>
        <sharedTo>
            <roleAndSubordinates>BGM_Super_Category_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_UnAssigned</fullName>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <label>CCC UnAssigned</label>
        <queue>CCC_UnAssigned</queue>
        <sharedTo>
            <roleAndSubordinates>CCC_Super_Category_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>RecentLeadsBySS</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>SuperCategory__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>BRao</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>SKC</value>
        </filters>
        <label>RecentLeadsBySS</label>
    </listViews>
    <listViews>
        <fullName>Softlines_UnAssigned</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Region__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Seller_Primary_Email__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Queue</filterScope>
        <label>Softlines UnAssigned</label>
        <queue>Softlines_UnAssigned</queue>
        <sharedTo>
            <group>Softlines_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>